remove old code comments from *.py files and fixed spacing and line too long

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,10 +18,6 @@
     border: #101820;
 }
 
-.text-small {
-    texts: 0.8rem;
-}
-
 nav-link:hover {
     color: white;
     background-color: blue;
